# wasmc

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  c2wasm.sh  compile.sh  compile_commands.json  readaot.c  run_test.sh  valgrind.sh
aotfmt/: aotfmt.bib  aotfmt.tex
apps/: CMakeLists.txt  readaot.c  wasmc.c
cmake/: cmake_uninstall.cmake.in
esp32c3-idf/: CMakeLists.txt  sdkconfig
esp32c3-idf/main/: CMakeLists.txt  add2.h  add2_wasm.h  base64.h  fib2-Os.h  heapsort.h  idf_component.yml  main.c  matrix.h  mean.h  msort.h  qsort.h  sieve.h  testaot.c  wamr.c  wasmc.c
esp32c3-idf/main/benchmarks/: crc32-Os.h  edit-distance-Os.h  fib2-Os.h  floyd-warshall-Os.h  gauss-elim-Os.h  heapsort-Os.h  knapsack-Os.h  lu-Os.h  matrix-Os.h  sieve-Os.h
include/wasmc/: wasmc.h
src/: 2  ;  CMakeLists.txt  Makefile  adlist.c  adlist.h  all.h  aot.c  aot.h  bitmap.h  compile.c  compile.h  dalist.c  dalist.h  emit.c  ir.c  ir.h  libqbe.c  libqbe.h  listx.h  main.c  parse.c  rega.c  ssa.c  test.ssa  test.wat  utils.c  wasm.c  wasm.h
src/qbe-1.2/: alias.c  all.h  cfg.c  copy.c  fold.c  live.c  load.c  main.c  mem.c  parse.c  rega.c  spill.c  ssa.c  util.c
src/qbe-1.2/amd64/: emit.c  isel.c  sysv.c
src/rv32/: emit.c  emit_aot.c  emit_asm.c  rv32i.h  rv32im.h  target.c
test/: ackermann.c  ackermann.wat  add.wasm  add.wat  base64.c  base64.wat  block1.wat  block2.wat  block3.wat  block4.wat  data1.wat  data2.wat  drop.wat  eq.wat  eqz.wat  fib2.c  fib2.wat  if-else.wasm  if-else.wat  if1.wat  if10.wat  if11.wat  if12.wat  if13.wat  if14.wat  if15.wat  if16.wat  if17.wat  if2.wat  if3.wat  if4.wat  if5.wat  if6.wat  if7.wat  if8.wat  if9.wat  loop1.wat  loop2.wat  lt_s.wat  lt_u.wat  (+17 more)
tests/: CMakeLists.txt  aottest.sh  iwasm_test.sh  readaot_test.sh  valgrind_test.sh
tests/wasm/: ackermann-O0.wasm  ackermann-O1.wasm  ackermann-O3.wasm  ackermann-Os.wasm  ackermann.wasm  add.wasm  base64-O0.wasm  base64-O1.wasm  base64-O2.wasm  base64-O3.wasm  base64-Os.wasm  base64.wasm  block1.wasm  block2.wasm  block3.wasm  block4.wasm  crc32-O0.wasm  crc32-O1.wasm  crc32-O2.wasm  crc32-O3.wasm  crc32-Os.wasm  data1.wasm  data2.wasm  drop.wasm  edit-distance-O0.wasm  edit-distance-O1.wasm  edit-distance-O2.wasm  edit-distance-O3.wasm  edit-distance-Os.wasm  eq.wasm  eqz.wasm  fib2-O0.wasm  fib2-O1.wasm  fib2-O2.wasm  fib2-O3.wasm  fib2.wasm  floyd-warshall-O0.wasm  floyd-warshall-O1.wasm  floyd-warshall-O2.wasm  floyd-warshall-O3.wasm  (+93 more)
tests/wasm/src/: add.wat  base64.c  base64.wat  block1.wat  block2.wat  block4.wat  crc32.c  data1.wat  drop.wat  edit-distance.c  fib2.c  floyd-warshall.c  gauss-elim.c  gimli.c  heapsort.c  heapsort.wat  if1.wat  if10.wat  if11.wat  if17.wat  if18.wat  if2.wat  if8.wat  if9.wat  isort.c  isort.wat  knapsack.c  loop1.wat  lu.c  matrix.c  matrix.wat  max.c  mean-even.c  mean-even.wat  mean.c  msort.c  ne.wat  sieve.c  sum.wat
tools/: readaot.c  run_test.sh  testaot.c  valgrind.sh
